Fix outliner : _mockUp

--- a/_mockUp/bin/html/blog.html
+++ b/_mockUp/bin/html/blog.html
@@ -25,12 +25,12 @@
     </header>
     <div class="parallax__img parallax__img--thirteen"></div>
     <div itemscope itemtype="http://schema.org/BlogPosting" class="parallax__body">
-      <h3 itemprop="headline" class="gamma">Les dernières nouvelles</h3>
+      <h2 itemprop="headline" class="gamma">Les dernières nouvelles</h2>
       <div itemrprop="about">
         <div class="articles">
           <div itemrprop="pageStart" class="inline-block articles__img"><img itemrprop="image" src="../css/images/mockUp/exempleBlog.jpg"></div>
           <div itemrprop="articleBody" class="inline-block articles__body">
-            <h4 itemrprop="headline" class="delta">Un chouette article</h4><span itemrprop="date" class="block body__dates">Le 7 Janvier 2015</span>
+            <h3 itemrprop="headline" class="delta">Un chouette article</h3><span itemrprop="date" class="block body__dates">Le 7 Janvier 2015</span>
             <p itemprop="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi cupiditate consequatur molestiae debitis cumque impedit et, in sint maiores eaque numquam! Veritatis deleniti dolor sapiente obcaecati alias quis, et nemo.</p>
             <p itemprop="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga laboriosam iure beatae in, quidem, veritatis nesciunt, mollitia sit, cumque inventore tempora culpa sint. Hic perspiciatis libero doloremque laborum, voluptatem, delectus!</p>
           </div>
@@ -38,7 +38,7 @@
         <div class="articles">
           <div itemrprop="pageStart" class="inline-block articles__img"><img itemrprop="image" src="../css/images/mockUp/exempleBlog.jpg"></div>
           <div itemrprop="articleBody" class="inline-block articles__body">
-            <h4 itemrprop="headline" class="delta">Un chouette article</h4><span itemrprop="date" class="block body__dates">Le 7 Janvier 2015</span>
+            <h3 itemrprop="headline" class="delta">Un chouette article</h3><span itemrprop="date" class="block body__dates">Le 7 Janvier 2015</span>
             <p itemprop="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi cupiditate consequatur molestiae debitis cumque impedit et, in sint maiores eaque numquam! Veritatis deleniti dolor sapiente obcaecati alias quis, et nemo.</p>
             <p itemprop="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga laboriosam iure beatae in, quidem, veritatis nesciunt, mollitia sit, cumque inventore tempora culpa sint. Hic perspiciatis libero doloremque laborum, voluptatem, delectus!</p>
           </div>
@@ -46,7 +46,7 @@
         <div class="articles">
           <div itemrprop="pageStart" class="inline-block articles__img"><img itemrprop="image" src="../css/images/mockUp/exempleBlog.jpg"></div>
           <div itemrprop="articleBody" class="inline-block articles__body">
-            <h4 itemrprop="headline" class="delta">Un chouette article</h4><span itemrprop="date" class="block body__dates">Le 7 Janvier 2015</span>
+            <h3 itemrprop="headline" class="delta">Un chouette article</h3><span itemrprop="date" class="block body__dates">Le 7 Janvier 2015</span>
             <p itemprop="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi cupiditate consequatur molestiae debitis cumque impedit et, in sint maiores eaque numquam! Veritatis deleniti dolor sapiente obcaecati alias quis, et nemo.</p>
             <p itemprop="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga laboriosam iure beatae in, quidem, veritatis nesciunt, mollitia sit, cumque inventore tempora culpa sint. Hic perspiciatis libero doloremque laborum, voluptatem, delectus!</p>
           </div>
@@ -56,7 +56,7 @@
     </div>
     <div class="parallax__img parallax__img--fourteen"></div>
     <div itemscope itemtype="http://schema.org/ImageGallery" class="parallax__body">
-      <h3 itemprop="headline">Nos souvenirs à travers tous nos Rallyes</h3>
+      <h2 itemprop="headline">Nos souvenirs à travers tous nos Rallyes</h2>
       <div itemrprop="about">
         <div class="inline-block gallery"><a itemprop="url" href="../css/images/mockUp/exempleGallery1.jpg" data-fresco-group="unique_name" class="fresco gallery__link"><img itemprop="image" src="../css/images/mockUp/exempleGallery.jpg" class="gallery__img"></a></div>
         <div class="inline-block gallery"><a itemprop="url" href="../css/images/mockUp/exempleGallery1.jpg" data-fresco-group="unique_name" class="fresco gallery__link"><img itemprop="image" src="../css/images/mockUp/exempleGallery.jpg" class="gallery__img"></a></div>
@@ -86,18 +86,18 @@
     <div class="parallax__body myFooter">
       <footer itemscope itemtype="http://schema.org/WPFooter">
         <section itemscope itemtype="http://schema.org/SiteNavigationElement" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Navigation</h5><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
+          <h4 itemprop="headline" class="delta">Navigation</h4><span itemprop="keywords" class="block"><a itemprop="url" href="../index.html">Accueil</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/TouristInformationCenter" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Nous contacter </h5>
+          <h4 itemprop="headline" class="delta">Nous contacter </h4>
           <p itemprop="contactPoint"><span class="block hightlight">Mail&nbsp;: </span><a itemprop="url" href="mailto: info@restorallye.com">info@restorallye.com</a></p>
           <p itemprop="telephone"><span class="block hightlight">Téléphone&nbsp;: </span>0471 38 06 38                                           </p>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Suivez-nous</h5><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
+          <h4 itemprop="headline" class="delta">Suivez-nous</h4><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__newsletter">
-          <h5 itemprop="headline" class="delta">Newsletter</h5>
+          <h4 itemprop="headline" class="delta">Newsletter</h4>
           <form id="ancreError" class="forms__newsletter">
             <input itemprop="object" type="text" placeholder="votre@mail.com" class="input__text">
             <input itemprop="target" type="submit" value="S'inscrire" class="newsletter__submit"><span itemprop="error" class="error">Il y a une faute de frappe</span>
