--- a/_mockUp/bin/html/contact.html
+++ b/_mockUp/bin/html/contact.html
@@ -25,7 +25,7 @@
     <div class="parallax__img parallax__img--nineteen"></div>
     <div class="parallax__body">
       <div itemscope itemtype="http://schema.org/Thing">
-        <h3 itemprop="headline" class="gamma">Un problème&nbsp;?</h3>
+        <h2 itemprop="headline" class="gamma">Un problème&nbsp;?</h2>
         <p itemprop="description">La moindre question &nbsp;? N'hesiter pas à nous contacter par mail ou via ce formulaire, nous serons heureux de vous répondre.</p>
         <form class="form">
           <div class="inline-block form__element">
@@ -58,7 +58,7 @@
     <div class="parallax__img parallax__img--twenty"></div>
     <div class="parallax__body">
       <div itemscope itemtype="http://schema.org/Thing">
-        <h3 itemprop="headline" class="gamma">Votre restaurant hôte d'un soir</h3>
+        <h2 itemprop="headline" class="gamma">Votre restaurant hôte d'un soir</h2>
         <p itemprop="description">Désireux de faire connaître votre restaurant, et par la même occasion faire découvrir votre carte à nos membres&nbsp;? Remplissez donc ce formulaire, il vous permettera de rentrer en contact avec l'un de nos organisateur et peut-être, vous serez à l'affiche du prochain Resto-Rallye&nbsp;!
           <div class="inline-block form__element">
             <label for="nomRestaurant" class="hightlight label__text">Nom du restaurant<span class="span--spacing asterisque">*</span></label>
@@ -116,18 +116,18 @@
     <div class="parallax__body myFooter">
       <footer itemscope itemtype="http://schema.org/WPFooter">
         <section itemscope itemtype="http://schema.org/SiteNavigationElement" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Navigation</h5><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
+          <h4 itemprop="headline" class="delta">Navigation</h4><span itemprop="keywords" class="block"><a itemprop="url" href="../index.html">Accueil</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/TouristInformationCenter" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Nous contacter </h5>
+          <h4 itemprop="headline" class="delta">Nous contacter </h4>
           <p itemprop="contactPoint"><span class="block hightlight">Mail&nbsp;: </span><a itemprop="url" href="mailto: info@restorallye.com">info@restorallye.com</a></p>
           <p itemprop="telephone"><span class="block hightlight">Téléphone&nbsp;: </span>0471 38 06 38                                           </p>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Suivez-nous</h5><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
+          <h4 itemprop="headline" class="delta">Suivez-nous</h4><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__newsletter">
-          <h5 itemprop="headline" class="delta">Newsletter</h5>
+          <h4 itemprop="headline" class="delta">Newsletter</h4>
           <form id="ancreError" class="forms__newsletter">
             <input itemprop="object" type="text" placeholder="votre@mail.com" class="input__text">
             <input itemprop="target" type="submit" value="S'inscrire" class="newsletter__submit"><span itemprop="error" class="error">Il y a une faute de frappe</span>
