--- a/_mockUp/bin/html/restaurants.html
+++ b/_mockUp/bin/html/restaurants.html
@@ -25,23 +25,23 @@
     <div class="parallax__img parallax__img--sixteen"></div>
     <div itemscope itemtype="http://schema.org/Thing" class="parallax__body">
       <div class="position--relative">
-        <h3 itemprop="headline" class="gamma">Les habitués du Resto Rallye</h3>
+        <h2 itemprop="headline" class="gamma">Les habitués du Resto Rallye</h2>
         <form class="forms__search forms__search--right">
           <input itemprop="object" type="text" placeholder="Recherche par région" class="input__text">
           <input itemprop="target" type="submit" value="S'inscrire" class="search__submit">
         </form>
         <div itemscope itemtype="http://schema.org/Restaurant" class="inline-block thumbnails"><a itemprop="url" href="restaurant.html" class="removeLink">
-            <h4 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/Restaurant" class="inline-block thumbnails"><a itemprop="url" href="restaurant.html" class="removeLink">
-            <h4 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/Restaurant" class="inline-block thumbnails"><a itemprop="url" href="restaurant.html" class="removeLink">
-            <h4 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/Restaurant" class="inline-block thumbnails"><a itemprop="url" href="restaurant.html" class="removeLink">
-            <h4 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/Restaurant" class="inline-block thumbnails"><a itemprop="url" href="restaurant.html" class="removeLink">
-            <h4 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/Restaurant" class="inline-block thumbnails"><a itemprop="url" href="restaurant.html" class="removeLink">
-            <h4 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="name" class="delta">Chez René,<span itemprop="addressLocality" class="span--spacing">Liège</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRest.jpg" class="thumbnails__img"></a></div>
         <div class="pagination"><span class="inline-block pagination__element"><a href="#" class="block removeLink pagination__element--links">&lang;&lang;</a></span><span class="inline-block pagination__element"><a href="#" class="block pagination__element--links">1</a></span><span class="inline-block pagination__element"><a href="#" class="block pagination__element--links">2</a></span><span class="inline-block pagination__element"><a href="#" class="block pagination__element--links">3</a></span><span class="inline-block pagination__element"><a href="#" class="block removeLink pagination__element--links">&rang;&rang;</a></span></div>
       </div>
     </div>
@@ -50,18 +50,18 @@
     <div class="parallax__body myFooter">
       <footer itemscope itemtype="http://schema.org/WPFooter">
         <section itemscope itemtype="http://schema.org/SiteNavigationElement" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Navigation</h5><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
+          <h4 itemprop="headline" class="delta">Navigation</h4><span itemprop="keywords" class="block"><a itemprop="url" href="../index.html">Accueil</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/TouristInformationCenter" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Nous contacter </h5>
+          <h4 itemprop="headline" class="delta">Nous contacter </h4>
           <p itemprop="contactPoint"><span class="block hightlight">Mail&nbsp;: </span><a itemprop="url" href="mailto: info@restorallye.com">info@restorallye.com</a></p>
           <p itemprop="telephone"><span class="block hightlight">Téléphone&nbsp;: </span>0471 38 06 38                                           </p>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Suivez-nous</h5><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
+          <h4 itemprop="headline" class="delta">Suivez-nous</h4><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__newsletter">
-          <h5 itemprop="headline" class="delta">Newsletter</h5>
+          <h4 itemprop="headline" class="delta">Newsletter</h4>
           <form id="ancreError" class="forms__newsletter">
             <input itemprop="object" type="text" placeholder="votre@mail.com" class="input__text">
             <input itemprop="target" type="submit" value="S'inscrire" class="newsletter__submit"><span itemprop="error" class="error">Il y a une faute de frappe</span>
