--- a/_mockUp/bin/html/evenements.html
+++ b/_mockUp/bin/html/evenements.html
@@ -25,7 +25,7 @@
     <div id="slideMap" class="parallax__img"></div>
     <div class="parallax__body">
       <div itemscope itemtype="http://schema.org/FoodEvent">
-        <h3 itemprop="headline" class="gamma">Rendez-vous le<span itemprop="startDate" class="span--spacing">21 Octobre</span>à<span itemprop="location" class="span--spacing">Seraing</span></h3>
+        <h2 itemprop="headline" class="gamma">Rendez-vous le<span itemprop="startDate" class="span--spacing">21 Octobre</span>à<span itemprop="location" class="span--spacing">Seraing</span></h2>
         <p itemprop="description">Pour la première fois dans l'historie de Resto-Rallye, nous organisons un évènement dans la ville de Seraing. Trois restaurants de la ville ont accepté de recevoir nos gastronomades et leurs faire découvrir les spécialités de leurs établissements.</p>
         <p itemprop="description">Que vous soyez habitué ou encore novice à ses évènements, nous vous invitons chaleureusement à nous rejoindre ce mardi 21 Octobre pour de nouvelle découverte gastronomique.</p>
         <p itemprop="description">Retrouver nous à<span itemprop="location" class="span--spacing hightlight">l'Église St Etienne</span></p>
@@ -34,7 +34,7 @@
     <div class="parallax__img parallax__img--six"></div>
     <div class="parallax__body">
       <div itemscope itemtype="http://schema.org/Thing">
-        <h3 itemprop="headline" class="gamma">Inscrivez-vous pour ce Resto-Rallye</h3>
+        <h2 itemprop="headline" class="gamma">Inscrivez-vous pour ce Resto-Rallye</h2>
         <p itemprop="description">Désireux de nous rejoindre à notre prochain événement&nbsp;? Rien de plus simple, il suffit de remplir le formulaire ci-dessous. Dépèchez-vous&nbsp;! Il ne reste plus que<span class="span--spacing hightlight">30 places</span>disponible.</p>
         <form class="form">
           <div class="inline-block form__element">
@@ -91,7 +91,7 @@
     <div class="parallax__img parallax__img--seven"></div>
     <div class="parallax__body">
       <div itemscope itemtype="http://schema.org/Thing">
-        <h3 itemprop="headline" class="gamma">Invitez vos amis à ce Resto-Rallye</h3>
+        <h2 itemprop="headline" class="gamma">Invitez vos amis à ce Resto-Rallye</h2>
         <p itemprop="description">Vous pouvez aussi décider d'offrir des places pour le prochain événement à l'un de vos amis. Vous n'avez qu'à remplir ce formulaire, nous nous occuperons de lui envoyer l'invitation. Dépèchez-vous&nbsp;! Il ne reste plus que<span class="span--spacing hightlight">30 places</span>disponible.
           <form class="form">
             <div class="inline-block form__element">
@@ -149,23 +149,23 @@
     <div class="parallax__img parallax__img--height"></div>
     <div class="parallax__body">
       <div class="position--relative">
-        <h3 class="gamma">Nos précédents Resto-Rallye</h3>
+        <h2 class="gamma">Nos précédents Resto-Rallye</h2>
         <form class="forms__search forms__search--right">
           <input itemprop="object" type="text" placeholder="Recherche par Ville" class="input__text">
           <input itemprop="target" type="submit" value="S'inscrire" class="search__submit">
         </form>
         <div itemscope itemtype="http://schema.org/FoodEvent" class="inline-block thumbnails"><a itemprop="url" href="evenement.html" class="removeLink">
-            <h4 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/FoodEvent" class="inline-block thumbnails"><a itemprop="url" href="evenement.html" class="removeLink">
-            <h4 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/FoodEvent" class="inline-block thumbnails"><a itemprop="url" href="evenement.html" class="removeLink">
-            <h4 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/FoodEvent" class="inline-block thumbnails"><a itemprop="url" href="evenement.html" class="removeLink">
-            <h4 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/FoodEvent" class="inline-block thumbnails"><a itemprop="url" href="evenement.html" class="removeLink">
-            <h4 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
         <div itemscope itemtype="http://schema.org/FoodEvent" class="inline-block thumbnails"><a itemprop="url" href="evenement.html" class="removeLink">
-            <h4 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h4><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
+            <h3 itemprop="attendee" class="delta">Resto-Rallye à<span itemprop="location" class="span--spacing">Namur</span></h3><img itemprop="image" src="../css/images/mockUp/exempleRallye.jpg" class="thumbnails__img"></a></div>
         <div class="pagination"><span class="inline-block pagination__element"><a href="#" class="block removeLink pagination__element--links">&lang;&lang;</a></span><span class="inline-block pagination__element"><a href="#" class="block pagination__element--links">1</a></span><span class="inline-block pagination__element"><a href="#" class="block pagination__element--links">2</a></span><span class="inline-block pagination__element"><a href="#" class="block pagination__element--links">3</a></span><span class="inline-block pagination__element"><a href="#" class="block removeLink pagination__element--links">&rang;&rang;</a></span></div>
       </div>
     </div>
@@ -174,18 +174,18 @@
     <div class="parallax__body myFooter">
       <footer itemscope itemtype="http://schema.org/WPFooter">
         <section itemscope itemtype="http://schema.org/SiteNavigationElement" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Navigation</h5><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
+          <h4 itemprop="headline" class="delta">Navigation</h4><span itemprop="keywords" class="block"><a itemprop="url" href="../index.html">Accueil</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="evenements.html">Événements</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="blog.html">Actualités</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="restaurants.html">Restaurants</a></span><span itemprop="keywords" class="block"><a itemprop="url" href="contact.html">Contact</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/TouristInformationCenter" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Nous contacter </h5>
+          <h4 itemprop="headline" class="delta">Nous contacter </h4>
           <p itemprop="contactPoint"><span class="block hightlight">Mail&nbsp;: </span><a itemprop="url" href="mailto: info@restorallye.com">info@restorallye.com</a></p>
           <p itemprop="telephone"><span class="block hightlight">Téléphone&nbsp;: </span>0471 38 06 38                                           </p>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__information">
-          <h5 itemprop="headline" class="delta">Suivez-nous</h5><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
+          <h4 itemprop="headline" class="delta">Suivez-nous</h4><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="https://www.facebook.com/RestoRallye?fref=ts" class="block social__link--fb">Accèder à la page Facebook</a></span><span itemprop="result" class="inline-block social__link"><a itemprop="url" href="#" class="block social__link--rss">Inscriver vous au flux RSS</a></span>
         </section>
         <section itemscope itemtype="http://schema.org/Action" class="inline-block footer__newsletter">
-          <h5 itemprop="headline" class="delta">Newsletter</h5>
+          <h4 itemprop="headline" class="delta">Newsletter</h4>
           <form id="ancreError" class="forms__newsletter">
             <input itemprop="object" type="text" placeholder="votre@mail.com" class="input__text">
             <input itemprop="target" type="submit" value="S'inscrire" class="newsletter__submit"><span itemprop="error" class="error">Il y a une faute de frappe</span>
